CloudFront-EoloPlanner/k8s/server.yml
# SERVER
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      restartPolicy: Always
      containers:
      - name: server
        image: garrijuan/server:v0.1
        ports:
        - containerPort: 8080
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
  - port: 8080
    targetPort: 8080
    name: server-port
  type: LoadBalancer
