CloudFront-EoloPlanner/k8s/toposervice.yml
# TOPO
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topo
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: toposervice
  template:
    metadata:
      labels:
        app: toposervice
    spec:
      restartPolicy: Always
      containers:
      - name: toposervice
        image: mastercloudapps/toposervice:v1.23
        ports:
        - containerPort: 8181
  replicas: 1

---
apiVersion: v1
kind: Service
metadata:
  name: toposervice
  labels:
    app: toposervice
spec:
  selector:
    app: toposervice
  ports:
  - port: 8181
    targetPort: 8181
    name: topo-port
  type: NodePort
