CloudFront-EoloPlanner/k8s/eoloplanner-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eoloplanner-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: server-service
              port:
                number: 8080
        - path: /toposervice/(.+)
          pathType: Prefix
          backend:
            service:
              name: toposervice
              port:
                number: 8181
