CloudFront-EoloPlanner/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eoloplanner-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: "*" 
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 8080
      - path: /toposervice/(.*)
        pathType: Prefix
        backend:
          service:
            name: toposervice
            port:
              number: 8181
